[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nira-temporal"
version = "1.0.0"
description = "Time-aware scheduling for Claude — manage tasks, reminders, and recurring schedules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "pachote", email = "beatsyncpro.official@gmail.com" }
]
keywords = ["mcp", "calendar", "scheduling", "time", "tasks", "reminders", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/pachote/nira-temporal"
Repository = "https://github.com/pachote/nira-temporal"
"Bug Tracker" = "https://github.com/pachote/nira-temporal/issues"

[project.scripts]
nira-temporal = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.hatch.metadata]
allow-direct-references = true
